--- a/app/templates/shopping-cart.html
+++ b/app/templates/shopping-cart.html
@@ -40,7 +40,7 @@
                                 <table id="shopping-cart-table" class="data-table cart-table">
                                     <tr>
                                         <th class="low1">Товар</th>
-                                        <th class="low7">Количество</th>
+                                        <th class="low7">Размер, цвет и количество</th>
                                         <th class="low7">Цена за 1 шт.</th>
                                         <th class="low7">Общая стоимость</th>
                                         <th class="low7">Отмена</th>
