--- a/app/templates/shop.html
+++ b/app/templates/shop.html
@@ -30,11 +30,11 @@
                             </div>
                             <form method="post">
                                 <div class="shop-one">
-                                    <h3 class="wg-title2">Категории</h3>
+                                    <h3 class="wg-title2">Направления</h3>
                                     <ul class="product-categories">
-                                        {% for category in categories %}
-                                            <input type="checkbox" name = "category" value='{{category.name}}'> {{category.name}}
-                                            <span class="count">{{category.products|length}}</span><br>
+                                        {% for fandom in fandoms %}
+                                            <input type="checkbox" name = "fandom" value='{{fandom.name}}'> {{fandom.name}}
+                                            <span class="count">{{fandom.products|length}}</span><br>
                                         {% endfor %}
                                     </ul>
                                 </div>
@@ -114,13 +114,13 @@
                                                                 <div class="pro-type">
                                                                     <span>new</span>
                                                                 </div>
-                                                                <a href="{{url_for('main.product', id = item.id)}}">
+                                                                <a href="{{url_for('main.product', product_id = item.id)}}">
                                                                     <img src="{{url_for('static', filename='img/products/1.jpg')}}" alt="Product Title"/>
                                                                     <img class="secondary-image" alt="Product Title" src="{{url_for('static', filename='img/products/2.jpg')}}">
                                                                 </a>
                                                             </div>
                                                             <div class="product-dsc">
-                                                                <h3><a href="{{url_for('main.product', id = item.id)}}">{{item.name}}</a></h3>
+                                                                <h3><a href="{{url_for('main.product', product_id = item.id)}}">{{item.name}}</a></h3>
                                                                 <div class="star-price">
                                                                     <span class="price-left">{{item.price|round|int}}₽</span>
                                                                 </div>
@@ -155,7 +155,7 @@
                                                                 <span>new</span>
                                                             </div>
                                                             <div class="re-img">
-                                                                <a href="{{url_for('main.product', id = item.id)}}"><img alt="" src="{{url_for('static', filename='img/products/1.jpg')}}"></a>
+                                                                <a href="{{url_for('main.product', product_id = item.id)}}"><img alt="" src="{{url_for('static', filename='img/products/1.jpg')}}"></a>
                                                             </div>
                                                             <div class="actions-btn">
                                                                 <a data-original-title="Quick View" data-toggle="modal" data-trigger="hover" data-target="#quick-view" data-placement="top" href="#">
@@ -167,7 +167,7 @@
                                                     <div class="col-md-8 col-sm-8">
                                                         <div class="f-fix">
                                                             <div class="tb-beg">
-                                                                <a href="{{url_for('main.product', id = item.id)}}">{{item.name}}</a>
+                                                                <a href="{{url_for('main.product', product_id = item.id)}}">{{item.name}}</a>
                                                             </div>
                                                             <div class="tb-product-wrap-price-rating">
                                                                 <div class="tb-product-price font-noraure-3">
