some fixes of orm orm models

--- a/app/templates/shop.html
+++ b/app/templates/shop.html
@@ -120,7 +120,7 @@
                                                                 </a>
                                                             </div>
                                                             <div class="product-dsc">
-                                                                <h3><a href="{{url_for('main.product', product_id = item.id)}}">{{item.name}}</a></h3>
+                                                                <h3><a href="{{url_for('main.product', product_id = item.id)}}">{{item.product_name}}</a></h3>
                                                                 <div class="star-price">
                                                                     <span class="price-left">{{item.price|round|int}}₽</span>
                                                                 </div>
