--- a/app/templates/single-product.html
+++ b/app/templates/single-product.html
@@ -101,16 +101,9 @@
                                         Осталось: {{quantity}}
                                     </p>
                                     <form class="all-payment" id ="size" method="post">
-                                        <p>Выберите цвет: 
+                                        <p>Выберите размер: 
                                             {% for size in sizes %}
-                                                   <input type="radio" name = "type" value='{{size.id}}'>{{size.size}}
-                                            {% endfor %}
-                                        </p>
-                                    </form>
-                                    <form class="all-payment" id ="color" method="post">
-                                        <p>Выберите размер:
-                                            {% for color in colors %}
-                                                    <input type="radio" name = "type" value='{{color.id}}'>{{color.name}}
+                                                   <input type="radio" name = "size" value='{{size.id}}'>{{size.size}}
                                             {% endfor %}
                                         </p>
                                     </form>
@@ -133,6 +126,7 @@
                                                     <div class="product-icon">
                                                             <input type="hidden" name="add_to_cart">
                                                             <input type="hidden" name="product_id" value="{{ product.id }}">
+                                                            <input type="hidden" name = "size_id" value="#size.value">
                                                             <button style="background-color: white;border: 1px solid #d3d3d3;width: 12%;height: 35px;"
                                                                 name = "atcart" class="fa fa-shopping-cart"></button>
                                                     </div>
