--- a/app/templates/shop.html
+++ b/app/templates/shop.html
@@ -26,11 +26,11 @@
 				    <div class="col-md-4 col-lg-3 col-sm-12">
                         <div class="all-shop-sidebar">
                             <div class="top-shop-sidebar">
-                                <h3 class="wg-title">SHOP BY</h3>
+                                <h3 class="wg-title">СОРТИРОВКА</h3>
                             </div>
                             <form method="post">
                                 <div class="shop-one">
-                                    <h3 class="wg-title2">Направления</h3>
+                                    <h3 class="wg-title2">Темы</h3>
                                     <ul class="product-categories">
                                         {% for fandom in fandoms %}
                                             <input type="checkbox" name = "fandom" value='{{fandom.name}}'> {{fandom.name}}
@@ -39,7 +39,7 @@
                                     </ul>
                                 </div>
                                 <div class="shop-one">
-                                    <h3 class="wg-title2">Types</h3>
+                                    <h3 class="wg-title2">Виды одежды</h3>
                                     <ul class="product-categories">
                                         {% for type in types %}
                                             <input type="checkbox" name = "type" value='{{type.name}}'> {{type.name}}
