Added ability to save orders to database

--- a/app/templates/name_address.html
+++ b/app/templates/name_address.html
@@ -142,7 +142,7 @@
                                         Общая сумма: 
                                         <span>
                                             <strong>
-                                                <span class="amount">{{ subtotal+prices[delivery] }}₽</span>
+                                                <span class="amount">{{ total }}₽</span>
                                             </strong>
                                         </span>
                                     </p>
