Fixed bug with pages

--- a/app/templates/thanks.html
+++ b/app/templates/thanks.html
@@ -7,7 +7,7 @@
                     <div class="col-md-12 text-center">
                         <div class="check">
                             <h2 style="margin: 0 35%">Спасибо за заказ!</h2>
-                            <p>Вашему заказу присвоен номер 1. Чек выслан на почту, указанную в форме о заказе.</p>
+                            <p>Вашему заказу присвоен номер {{order_id}}. Чек выслан на почту, указанную в форме о заказе.</p>
                             <a style="margin: 5% 35%" class="btn btn-default col-md-3" id="submit" name="submit" href="{{url_for('main.index')}}">На главную</a>
                         </div>
                     </div>
