--- a/app/templates/shopping-cart.html
+++ b/app/templates/shopping-cart.html
@@ -53,8 +53,14 @@
                                         </td>
                                         <td class="sop-cart an-sh">
                                             <form action="/how_much" method="post">
+                                                <input type="hidden" name="product_id" value="{{ item }}">
                                                 <div class="tb-product-price font-noraure-3">
-                                                    <span class="amount">Размер - {{products.get(item)[4]}}</span>                                                   
+                                                    <span class="amount">Размер - {{products.get(item)[4]}}</span>
+                                                    <select>
+                                                        {% for i in ['S', 'M', 'L', 'XL'] %}
+                                                        <option>{{i}}</option>
+                                                        {% endfor %}
+                                                    </select>                                                 
                                                 </div>
                                                 <div class="quantity ray">
                                                     <input class="input-text qty text" name = "quantity" type="number" size="4" title="Qty" value="{{products.get(item)[2]}}" min="0" step="1">
@@ -106,6 +112,15 @@
                                 <a style="margin: 20 0" class="col-md-7 col-sm-12 col-xs-12 button wc-backward" href="{{url_for('main.shop')}}">Продолжить покупки</a>
                                 <a style="margin: 20 0" class="col-md-4 col-sm-12 col-xs-12 wc-forward" href="{{url_for('main.checkout')}}">Оформить заказ</a>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="last-check1">
+                        <div class="yith-wcwl-share yit">
+                            <p class="checkout-coupon an-cop">
+                                <input type="submit" value="Обновить данные товаров">
+                            </p>
                         </div>
                     </div>
                 </div>
