--- a/app/templates/single-product.html
+++ b/app/templates/single-product.html
@@ -100,13 +100,13 @@
                                     <p class="availability in-stock2", style="font-size:120%">
                                         Осталось: {{quantity}}
                                     </p>
-                                    <form class="all-payment" id ="size" method="post">
-                                        <p>Выберите размер: 
-                                            {% for size in sizes %}
-                                                   <input type="radio" name = "size_id" value='{{size.id}}'>{{size.size}}
-                                            {% endfor %}
-                                        </p>
-                                    </form>
+                                    <!--<form class="all-payment" id ="sizes" method="post">-->
+                                    <p>Выберите размер: 
+                                        {% for size in sizes %}
+                                               <input type="radio" name = "size_id" id = "size_id" value='{{size.id}}'>{{size.size}}
+                                        {% endfor %}
+                                    </p>
+                                    <!--</form>-->
                                     <div class="pre-box">
                                         <span class="special-price">{{product.price}}₽</span>
                                     </div>
@@ -118,17 +118,17 @@
                                                         <label>Кол-во:</label>
                                                         <div class="quantity">
                                                             <div class="cart-plus-minus">
-                                                              <input type="text" value="1" name="qtybutton" class="cart-plus-minus-box">
+                                                              <input type="text" value="1" name="qtybutton" id="qtybutton" class="cart-plus-minus-box">
                                                               <input type="hidden" name="quantity" value = "#qtybutton.value">
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="product-icon">
-                                                            <input type="hidden" name="add_to_cart">
-                                                            <input type="hidden" name="product_id" value="{{ product.id }}">
-                                                            <input type="hidden" name = "size_id" value='#size_id.value'>
-                                                            <button style="background-color: white;border: 1px solid #d3d3d3;width: 12%;height: 35px;"
-                                                                name = "atcart" class="fa fa-shopping-cart"></button>
+                                                        <input type="hidden" name="add_to_cart">
+                                                        <input type="hidden" name="product_id" value="{{ product.id }}">
+                                                        <input type="hidden" name ="size" value='#size_id.value'>
+                                                        <button style="background-color: white;border: 1px solid #d3d3d3;width: 12%;height: 35px;"
+                                                            name = "atcart" class="fa fa-shopping-cart"></button>
                                                     </div>
                                                 </form>
                                             </div>
